--- a/src/Layout/Footer/Footer.scss
+++ b/src/Layout/Footer/Footer.scss
@@ -141,5 +141,8 @@
         .footer__widget, .footer__features {
             margin-bottom: 20px;
         }
+        .col-12{
+            display: none;
+        }
     }
 }
