--- a/src/Pages/Sets/Sets.scss
+++ b/src/Pages/Sets/Sets.scss
@@ -12,11 +12,11 @@
         margin-bottom: 20px;
         margin-top: 230px;
 
-
         div {
             display: flex;
             align-items: center;
             margin-bottom: 0.5rem;
+            flex-wrap: wrap;
             
             p {
                 margin: 0;
@@ -52,6 +52,7 @@
 
         .sets__filters {
             display: flex;
+            flex-wrap: wrap;
             gap: 1rem;
             margin-bottom: 1rem;
 
@@ -183,10 +184,20 @@
         p {
             font-size: 14px;
         }
+
+        div {
+            flex-direction: column;
+            align-items: flex-start;
+        }
     }
 
     .sets__card {
         max-width: 100%;
+    }
+
+    .sets__filters {
+        justify-content: center;
+        gap: 0.5rem;
     }
 }
 
@@ -197,5 +208,17 @@
         p {
             font-size: 12px;
         }
+
+        div {
+            align-items: center;
+        }
+    }
+
+    .sets__filters {
+        gap: 0.3rem;
+    }
+
+    .sets__card {
+        padding: 1rem 0.5rem;
     }
 }
