--- a/src/Pages/Home/News/NewsSlide/SlideComponet2.module.scss
+++ b/src/Pages/Home/News/NewsSlide/SlideComponet2.module.scss
@@ -54,7 +54,7 @@
     }
     .swiper-pagination {
         position: absolute;
-        bottom: 10px; /* Позиция снизу */
+        bottom: 10px;
         width: 100%;
         text-align: center;
         padding: 0 10px;
