--- a/src/Layout/Header/BurgerMenu/BurgerMenu.scss
+++ b/src/Layout/Header/BurgerMenu/BurgerMenu.scss
@@ -8,8 +8,7 @@
         width: 24px;
         height: 18px;
         cursor: pointer;
-        z-index: 1001; // Убедитесь, что иконка выше других элементов
-
+        z-index: 1001; 
         span {
             display: block;
             width: 100%;
@@ -30,7 +29,7 @@
         transform: translateX(100%);
         transition: transform 0.3s ease;
         overflow: auto;
-        padding-top: 60px; // Оставьте пространство для иконки меню
+        padding-top: 60px;
 
         &.open {
             transform: translateX(0);
